--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,12 @@ version: "3"
 
 services:
   v2ray:
-    image: v2fly/v2fly-core:latest
+    build:
+      context: ./v2ray/dockerImage/
+      dockerfile: dockerFile
+      args:
+        TAG: v5.13.0   # v2fly/v2ray version
+        TARGETPLATFORM: linux/386
     restart: always
     volumes:
       - ./v2ray/config/:/etc/v2ray/
@@ -13,7 +18,7 @@ services:
       - "127.0.0.1:8080:8080"
     entrypoint: ["/usr/bin/v2ray", "run", "-c", "/etc/v2ray/config.json"]
   caddy:
-    image: ghcr.io/getimages/caddy:2.6.2-alpine
+    image: caddy:2.7-builder-alpine
     restart: always
     ports:
       - "80:80"
