caddy version update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "127.0.0.1:8080:8080"
     entrypoint: ["/usr/bin/v2ray", "run", "-c", "/etc/v2ray/config.json"]
   caddy:
-    image: caddy:2.7-builder-alpine
+    image: caddy:2.6.2-alpine
     restart: always
     ports:
       - "80:80"
